✨ feat: enhance ProfileModal styling and fix layout issues
Refine ProfileModal layout by removing redundant inline styles and
switching to `auto` for dynamic dimensions and spacing adjustments.
Fix SCSS calculation errors by wrapping ratios in `calc()`.

--- a/src/styles/ProfileModal.scss
+++ b/src/styles/ProfileModal.scss
@@ -3,11 +3,6 @@ USER PROFILE MODAL
 */
 
 .profile {
-  width: 500px;
-  position: relative;
-  text-align: center;
-  margin-top: 10px;
-
   .profile-infos {
     display: flex;
     align-items: center;
@@ -22,12 +17,7 @@ USER PROFILE MODAL
     .profile-infos-wrapper {
       margin: 0 auto;
       position: relative;
-      height: 520px;
-      margin-bottom: 25px;
-
-      .role-profil {
-        margin-left: 11vh;
-      }
+      height: auto;
     }
 
     .profile-infos-user {
@@ -36,7 +26,7 @@ USER PROFILE MODAL
       background-color: #0e1735;
       width: 500px;
       height: auto;
-      margin: -1.5vh 0 0 11vh;
+      margin: -1.5vh 0 0;
     }
 
     .profile-avatar {
@@ -1020,7 +1010,7 @@ USER PROFILE MODAL
 .hamlet-banner {
   position: relative;
   width: 100%;
-  padding-top: 100% * 50 / 395;
+  padding-top: calc(100% * 50 / 395);
   background-color: #333;
   background-size: cover;
   background-position: top center;
@@ -1032,7 +1022,7 @@ USER PROFILE MODAL
     left: 0;
     bottom: 0;
     width: 100%;
-    padding-top: 100% * 50 / 300;
+    padding-top: calc(100% * 50 / 300);
 
     background-position: bottom;
     background-size: 100%;
